src/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>ArticleSKU__c</fullName>
        <description>Article number from the Product record</description>
        <formula>Product2.Article__c</formula>
        <label>Article (SKU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <description>Used to describe the service code based on AX Service Types</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ServiceType</valueSetName>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>